# aoc2023

./: .gitignore  Dockerfile  README.md  justfile  pyproject.toml
aoc/: bench_cli.py  cli.py  day01.py  day02.py  day03.py  day04.py  day05.py  day06.py  day07.py  day08.py  day09.py  day10.py  day11.py  day12.py  day13.py  day14.py  day15.py  day16.py  day17.py  day18.py  template.py  utilities.py
aoc/util/: __init__.py
ci/: build-task.yaml
ci/scripts/: build.sh  input_path.sh  install.sh
inputs/: day07_example.txt
scripts/: new.sh
tests/: template.py  test_day01.py  test_day02.py  test_day03.py  test_day04.py  test_day05.py  test_day06.py  test_day07.py  test_day08.py  test_day09.py  test_day10.py  test_day11.py  test_day12.py  test_day13.py  test_day14.py  test_day15.py  test_day16.py  test_day17.py  test_day18.py
